arreglos de diseño

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <img src="music-66.svg" alt="music" class="img">
                         </div>
                     </div>
-                    <div>
+                    <div class="ArtistRight">
                         <h1>TOP ARTIST</h1> 
                         <div class="containerArtist">
                           <div class="imgArtist"></div>
