--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
                     </div>
                 </nav>
                 <section class="containerBody fontsColorWhite">
-                    <div class="container_flex " >
-                        <div class="text_container ">
+                    <div class="container_flex" >
+                        <div class="text_container">
                             <span>Escucha tu música favorita</span>
                             <h3>Ponte al día con las canciones en tendencia</h3>
-                            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium</span>
-                            <button>Explorar</button>
+                            <span class="fontDescription">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium</span>
+                            <div>
+                              <button class="btnExplore">Explore Now</button>
+                            </div>
                         </div>
                         <div class="image_container">
-                            <img src="music-66.svg" alt="music" class="img">
+                            <img src="model_music.png" alt="music" class="img">
                         </div>
                     </div>
                     <div class="ArtistRight">
